      parsed.
    - Add new set_field_substvars() method to Dpkg::Substvars.
    - Fix reproducible source package support in Dpkg::Source::Archive, by
      sorting the tar contents with --sort=name.
    - Prefix private Dpkg::Source::Package::* functions with _.
    - Defer filehandle closures in Dpkg::IPC::spawn() to avoid double-close.
      Closes: #839905, #840293
  * Packaging:
    - Add liblocale-gettext-perl to libdpkg-perl Recommends.
    - Wrap and document dependency relationships.
    - Remove obsolete dependency relationships, since Debian oldstable.
    - Remove update-alternatives, dpkg-divert and dpkg-statoverride
      compatibility symlinks, again.
    - Use perl:Depends via dh_perl instead of a hardcoded perl in Depends.
    - Remove unused dh_strip from binary_indep target.
    - Remove ancient upgrade code from maintainer scripts (before 1.15.x).
    - Stop compressing the dpkg.deb package with gzip.
  * Documentation:
    - Update custom changelog parser API support status in README.api.
    - Fix typos in docs and man pages. Thanks to Jakub Wilk <jwilk@debian.org>
      Closes: #834584
    - Fix formatting in SOURCE_DATE_EPOCH description in dpkg-deb(5).
    - Improve dpkg-deb --build arguments documentation in dpkg-deb(1).
      Prompted by Johannes Schauer <josch@debian.org>.
    - Document the .changes filename that dpkg-buildpackage generates in
      dpkg-buildpackage(1). Prompted by Johannes Schauer <josch@debian.org>.
    - Add basic maintainer script man pages: deb-postinst(5), deb-postrm(5),
      deb-preinst(5) and deb-prerm(5).
    - Add new deb-src-files(5) man page.
      Prompted by Johannes Schauer <josch@debian.org>.
    - Add man page references to other binary control files in dpkg(1).
    - Add version when "new" substvars were introduced in deb-substvars(5).
    - Switch deb-triggers(5) types into a proper list.
    - Itemize --log format entries in dpkg(1).